@startuml UcRegister

title Authentication — RegisterUserUseCase

left to right direction
skinparam packageStyle rectangle
skinparam componentStyle rectangle
skinparam linetype ortho

' ── Ports OUT ─────────────────────────────────
interface "SaveUserPort"       as SAVE #A5D6A7
interface "PasswordEncoderPort" as ENC  #A5D6A7
interface "DomainEventPublisher" as PUB #A5D6A7

component [UserAggregate] as UA #FFF9C4

' ══ RegisterUserUseCase ══════════════════════
package "RegisterUserUseCase" #E8F5E9 {
    interface "RegisterUserPort" as P_REG
    component [RegisterUserUseCase] as UC_REG
    P_REG ..|> UC_REG
}

UC_REG --> UA   : create()
UC_REG --> ENC  : encode(rawPassword)
UC_REG --> SAVE : save(user)
UC_REG --> PUB  : UserRegisteredEvent

note right of PUB
  UserRegisteredEventListener:
  · envía email de verificación
  · asigna token de verificación
end note

@enduml

